# TG0-MultiPad

./: .gitattributes  .gitignore  README.md  README.zh-CN.md
scripts/: bridge_com7_to_tcp.ps1  c2_diagnostics_stability.py  c2_hardware_stability_gate.sh  monitor_com7_raw.ps1  smoke_diagnostics_topic.py  smoke_publish_raw_disabled.sh  smoke_raw_com7_tcp_bridge.sh  smoke_raw_file_replay.sh  smoke_raw_publisher.py  smoke_raw_serial_pty.sh  test_c2_diagnostics_stability.py  test_smoke_diagnostics_topic.py
src/tg0_multipad_driver/: CMakeLists.txt  package.xml
src/tg0_multipad_driver/examples/: raw_plot_channels.py  rqt_plot_raw.sh
src/tg0_multipad_driver/include/tg0_multipad_driver/: adda_frame_parser.hpp  raw_frame_message.hpp  raw_stream_diagnostics.hpp  serial_port.hpp
src/tg0_multipad_driver/src/: adda_frame_parser.cpp  raw_frame_message.cpp  raw_frame_publisher_node.cpp  raw_stream_diagnostics.cpp  serial_port.cpp
src/tg0_multipad_driver/test/: test_adda_frame_parser.cpp  test_raw_frame_message.cpp  test_raw_plot_channels.py  test_raw_stream_diagnostics.cpp  test_rqt_plot_raw.py  test_serial_port.cpp
src/tg0_multipad_msgs/: CMakeLists.txt  package.xml
src/tg0_multipad_msgs/msg/: RawFrame.msg
