<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tg0_multipad_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 driver for TG0 ADDA multipad sensor frames.</description>
  <maintainer email="dinghuang@tangi0.com">Dylan</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <build_depend>tg0_multipad_msgs</build_depend>
  <build_export_depend>tg0_multipad_msgs</build_export_depend>
  <exec_depend>tg0_multipad_msgs</exec_depend>

  <exec_depend>rqt_plot</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
